--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@ body {
 }
 
 .container{
-  background-color: #eee;
-  width: 450px;
-  height: 500px;
+  background-color: #ddd;
+  max-width: 450px;
+  /* height: 500px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,6 +37,7 @@ input{
   border-radius: 5px;
   margin-right: 10px;
   font-size: 20px;
+  max-width: 150px;
 }
 
 select{
